--- a/cdss_1/cdss_1/sus_analysis.ipynb
+++ b/cdss_1/cdss_1/sus_analysis.ipynb
@@ -29,8 +29,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "72.5\n",
-      "6.793662204867575\n"
+      "70.9375\n",
+      "8.107352629969087\n"
      ]
     }
    ],
@@ -290,6 +290,34 @@
        "      <td>3</td>\n",
        "      <td>70.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>67.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>52.5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -309,7 +337,9 @@
        "10   3   3   3   3    4   2   3   4   3   4   80.0\n",
        "11   3   4   3   3    4   3   3   3   4   3   82.5\n",
        "12   3   3   3   3    3   1   3   3   3   2   67.5\n",
-       "13   3   3   3   3    3   2   3   2   3   3   70.0"
+       "13   3   3   3   3    3   2   3   2   3   3   70.0\n",
+       "14   3   3   3   3    3   2   3   1   3   3   67.5\n",
+       "15   1   3   3   1    3   1   2   1   3   3   52.5"
       ]
      },
      "execution_count": 4,
@@ -367,8 +397,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70.71428571428571\n",
-      "7.460211920901571\n"
+      "70.3125\n",
+      "6.999681115185585\n"
      ]
     }
    ],
@@ -412,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
