--- a/cdss_1/cdss_1/analysis/sus_analysis.ipynb
+++ b/cdss_1/cdss_1/analysis/sus_analysis.ipynb
@@ -29,8 +29,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "72.05357142857143\n",
-      "9.884836203624559\n"
+      "72.08333333333333\n",
+      "9.628516673576119\n"
      ]
     }
    ],
@@ -486,6 +486,34 @@
        "      <td>2</td>\n",
        "      <td>65.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>77.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>67.5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -519,7 +547,9 @@
        "24   4   4   3   4    4   4   4   4   4   4   97.5\n",
        "25   2   4   2   1    3   2   3   4   4   3   70.0\n",
        "26   3   3   2   3    3   2   3   1   3   2   62.5\n",
-       "27   2   2   3   2    3   3   3   3   3   2   65.0"
+       "27   2   2   3   2    3   3   3   3   3   2   65.0\n",
+       "28   3   4   3   3    2   3   3   3   4   3   77.5\n",
+       "29   3   3   2   3    2   3   3   3   3   2   67.5"
       ]
      },
      "execution_count": 4,
@@ -737,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
