--- a/cdss_1/cdss_1/analysis/click_hover_timing_analysis.ipynb
+++ b/cdss_1/cdss_1/analysis/click_hover_timing_analysis.ipynb
@@ -2036,6 +2036,8 @@
     "print(f\"Shapiro-Wilk test for CDSS group: {shapiro_cdss}\")\n",
     "print(f\"Shapiro-Wilk test for SOC group: {shapiro_soc}\")\n",
     "\n",
+    "### Also add test for variance - levene_test ###\n",
+    "\n",
     "# Perform the paired t-test if both groups are normally distributed\n",
     "if shapiro_cdss.pvalue > 0.05 and shapiro_soc.pvalue > 0.05:\n",
     "    stat, p  = stats.ttest_rel(cdss_group, soc_group)\n",
