--- a/cdss_1/cdss_1/analysis/tam_analysis2.ipynb
+++ b/cdss_1/cdss_1/analysis/tam_analysis2.ipynb
@@ -25,7 +25,7 @@
     "from statsmodels.formula.api import ols\n",
     "from scipy.stats import f_oneway, kruskal\n",
     "import seaborn as sns\n",
-    "\n",
+    "from statsmodels.stats.inter_rater import fleiss_kappa\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -106,26 +106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.53125"
+       "3.5833333333333335"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "0.8625421177912788"
+       "0.8441656967692293"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,6 +168,218 @@
     "# Corrected item-total correlation\n",
     "item_total_corr = pu_df.apply(lambda x: x.corr(pu_df.drop(columns=x.name).sum(axis=1)))\n",
     "print(f\"Item-Total Correlations for pu_df:\\n\", item_total_corr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PU1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PU12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      1   2   3   4   5\n",
+       "PU1   0   0  11  24   2\n",
+       "PU2   0  12  10  14   1\n",
+       "PU3   0   3   7  20   7\n",
+       "PU4   1   3   6  17  10\n",
+       "PU5   0   4   5  22   6\n",
+       "PU6   0   8  10  13   6\n",
+       "PU7   1   6   8  16   6\n",
+       "PU8   0   3   8  23   3\n",
+       "PU9   1   7  15  12   2\n",
+       "PU10  0   3  20  14   0\n",
+       "PU11  0   8  11  17   1\n",
+       "PU12  0   3   1  21  12"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fleiss' Kappa: 0.04576304052743852\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Transpose the DataFrame to make each question a row\n",
+    "df_transposed = pu_df.transpose()\n",
+    "\n",
+    "# Determine the rating categories, assuming ratings from 1 to 5\n",
+    "categories = range(1, 6)  # Adjust range if your ratings differ\n",
+    "\n",
+    "# Initialize a DataFrame to store the counts\n",
+    "rating_counts = pd.DataFrame(index=df_transposed.index, columns=categories).fillna(0)\n",
+    "\n",
+    "# Count the occurrences of each rating for each question\n",
+    "for index, row in df_transposed.iterrows():\n",
+    "    for rating in categories:\n",
+    "        rating_counts.loc[index, rating] = sum(row == rating)\n",
+    "\n",
+    "# Calculate Fleiss' kappa\n",
+    "kappa = fleiss_kappa(rating_counts.iloc[:2])\n",
+    "print(\"Fleiss' Kappa:\", kappa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.49999999999999994"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fleiss_kappa(np.array([[1,1,1], [1,1,1]]) )"
    ]
   },
   {
