--- a/cdss_1/cdss_1/analysis/sus_analysis.ipynb
+++ b/cdss_1/cdss_1/analysis/sus_analysis.ipynb
@@ -36,8 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "72.43243243243244\n",
-      "8.945950482203108\n"
+      "72.4342105263158\n",
+      "8.824238006021439\n"
      ]
     }
    ],
@@ -675,15 +675,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70.83333333333333\n",
-      "9.09604833090146\n"
+      "70.97222222222223\n",
+      "8.494760014998558\n"
      ]
     }
    ],
@@ -712,15 +712,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "73.75\n",
-      "10.082988974836116\n"
+      "73.8157894736842\n",
+      "9.367809133047938\n"
      ]
     }
    ],
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1215,6 +1215,66 @@
        "      <td>Other</td>\n",
        "      <td>Moderately familiar</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Slightly familiar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>80.0</td>\n",
+       "      <td>b</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Slightly familiar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Infectious Diseases</td>\n",
+       "      <td>Consultant</td>\n",
+       "      <td>Very familiar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>b</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Infectious Diseases</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Moderately familiar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Microbiology</td>\n",
+       "      <td>Consultant</td>\n",
+       "      <td>Very familiar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>72.5</td>\n",
+       "      <td>b</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Consultant</td>\n",
+       "      <td>Not familiar</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1252,6 +1312,12 @@
        "28   77.5              b     40s    Male                  Other  Consultant   \n",
        "29   67.5              a     30s    Male    Infectious Diseases       Other   \n",
        "30   80.0              b     30s    Male    Infectious Diseases       Other   \n",
+       "31   65.0              a     20s  Female                  Other       Other   \n",
+       "32   80.0              b     30s  Female                  Other       Other   \n",
+       "33   75.0              a     40s    Male    Infectious Diseases  Consultant   \n",
+       "34   70.0              b     30s    Male    Infectious Diseases       Other   \n",
+       "35   75.0              a     30s    Male           Microbiology  Consultant   \n",
+       "36   72.5              b     40s  Female                  Other  Consultant   \n",
        "\n",
        "     ai_familiarity_new  \n",
        "0     Slightly familiar  \n",
@@ -1284,10 +1350,16 @@
        "27    Slightly familiar  \n",
        "28    Slightly familiar  \n",
        "29  Moderately familiar  \n",
-       "30  Moderately familiar  "
+       "30  Moderately familiar  \n",
+       "31    Slightly familiar  \n",
+       "32    Slightly familiar  \n",
+       "33        Very familiar  \n",
+       "34  Moderately familiar  \n",
+       "35        Very familiar  \n",
+       "36         Not familiar  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,42 +1370,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shapiro test: W-statistic=0.97391676902771, p-value=0.6321989893913269\n",
-      "Levene's test for user_archetype: W-statistic=0.08922647949617814, p-value=0.76729287907029\n",
-      "Levene's test for age_new: W-statistic=1.3181180181147154, p-value=0.2894520612671879\n",
-      "Levene's test for sex_new: W-statistic=2.7642452116935488, p-value=0.10716491906641722\n",
-      "Levene's test for medical_speciality_new: W-statistic=0.6100320619088208, p-value=0.6143136023823458\n",
-      "Levene's test for grade_new: W-statistic=0.21644807363038998, p-value=0.6452345555771726\n",
-      "Levene's test for ai_familiarity_new: W-statistic=0.6497302716369059, p-value=0.5899873538868494\n",
+      "Shapiro test: W-statistic=0.979160726070404, p-value=0.7024097442626953\n",
+      "Levene's test for user_archetype: W-statistic=0.02699324115769576, p-value=0.8704431392899902\n",
+      "Levene's test for age_new: W-statistic=1.8435309090087577, p-value=0.14478013253080874\n",
+      "Levene's test for sex_new: W-statistic=2.4927579269005693, p-value=0.12336765354813187\n",
+      "Levene's test for medical_speciality_new: W-statistic=0.6013500510797872, p-value=0.6187223767476131\n",
+      "Levene's test for grade_new: W-statistic=0.1138373174386723, p-value=0.7378321408125872\n",
+      "Levene's test for ai_familiarity_new: W-statistic=1.053061162853033, p-value=0.38219959630206723\n",
       "\n",
       "\n",
       "anova_bool: True\n",
       "\n",
       "\n",
       "Collective\n",
-      "ANOVA for user_archetype: Statistic=0.3332, p-value=0.5713\n",
+      "ANOVA for user_archetype: Statistic=0.6526, p-value=0.4275\n",
       "  -> The differences in user_archetype are not statistically significant.\n",
       "\n",
-      "ANOVA for age_new: Statistic=2.4400, p-value=0.0867\n",
+      "ANOVA for age_new: Statistic=2.5762, p-value=0.0645\n",
       "  -> The differences in age_new are not statistically significant.\n",
       "\n",
-      "ANOVA for sex_new: Statistic=0.7442, p-value=0.4003\n",
+      "ANOVA for sex_new: Statistic=0.0355, p-value=0.8523\n",
       "  -> The differences in sex_new are not statistically significant.\n",
       "\n",
-      "ANOVA for medical_speciality_new: Statistic=1.8747, p-value=0.1722\n",
+      "ANOVA for medical_speciality_new: Statistic=1.0904, p-value=0.3730\n",
       "  -> The differences in medical_speciality_new are not statistically significant.\n",
       "\n",
-      "ANOVA for grade_new: Statistic=0.0342, p-value=0.8554\n",
+      "ANOVA for grade_new: Statistic=0.0909, p-value=0.7657\n",
       "  -> The differences in grade_new are not statistically significant.\n",
       "\n",
-      "ANOVA for ai_familiarity_new: Statistic=1.3451, p-value=0.2930\n",
+      "ANOVA for ai_familiarity_new: Statistic=0.9775, p-value=0.4205\n",
       "  -> The differences in ai_familiarity_new are not statistically significant.\n",
       "\n",
       "ANOVA for Residual: Statistic=nan, p-value=nan\n",
@@ -1341,22 +1413,22 @@
       "\n",
       "\n",
       "Independant\n",
-      "ANOVA for user_archetype: Statistic=0.7118, p-value=0.4058\n",
+      "ANOVA for user_archetype: Statistic=0.9321, p-value=0.3409\n",
       "  -> The differences in user_archetype are not statistically significant.\n",
       "\n",
-      "ANOVA for age_new: Statistic=1.3459, p-value=0.2797\n",
+      "ANOVA for age_new: Statistic=1.7262, p-value=0.1685\n",
       "  -> The differences in age_new are not statistically significant.\n",
       "\n",
-      "ANOVA for sex_new: Statistic=0.1293, p-value=0.7218\n",
+      "ANOVA for sex_new: Statistic=0.0988, p-value=0.7552\n",
       "  -> The differences in sex_new are not statistically significant.\n",
       "\n",
-      "ANOVA for medical_speciality_new: Statistic=1.0065, p-value=0.4051\n",
+      "ANOVA for medical_speciality_new: Statistic=0.9775, p-value=0.4152\n",
       "  -> The differences in medical_speciality_new are not statistically significant.\n",
       "\n",
-      "ANOVA for grade_new: Statistic=0.0683, p-value=0.7957\n",
+      "ANOVA for grade_new: Statistic=0.0165, p-value=0.8987\n",
       "  -> The differences in grade_new are not statistically significant.\n",
       "\n",
-      "ANOVA for ai_familiarity_new: Statistic=0.3254, p-value=0.8070\n",
+      "ANOVA for ai_familiarity_new: Statistic=0.3763, p-value=0.7707\n",
       "  -> The differences in ai_familiarity_new are not statistically significant.\n",
       "\n"
      ]
