--- a/cdss_1/cdss_1/analysis/click_hover_timing_analysis.ipynb
+++ b/cdss_1/cdss_1/analysis/click_hover_timing_analysis.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_30902/569877031.py:29: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/tmp/ipykernel_15641/569877031.py:29: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  hover_events = pd.concat(dfs_list, ignore_index=True)\n"
      ]
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1680,23 +1680,23 @@
        "2735      10              a                    /sus/   \n",
        "2736      10              a                    /tam/   \n",
        "\n",
-       "                           entry_time                        exit_time  \n",
-       "0    2024-06-17 11:33:13.977045+00:00 2024-06-17 11:33:14.131926+00:00  \n",
-       "1    2024-06-17 11:33:14.140396+00:00 2024-06-17 11:33:39.016139+00:00  \n",
-       "2    2024-06-17 11:33:39.023910+00:00 2024-06-17 11:33:41.556147+00:00  \n",
-       "3    2024-06-17 11:33:41.563947+00:00 2024-06-17 11:33:44.448222+00:00  \n",
-       "4    2024-06-17 11:33:44.453483+00:00 2024-06-17 11:34:42.400927+00:00  \n",
-       "...                               ...                              ...  \n",
-       "2732 2024-06-10 10:34:41.446511+00:00 2024-06-10 10:34:41.532564+00:00  \n",
-       "2733 2024-06-10 10:34:41.542251+00:00 2024-06-10 10:34:48.253354+00:00  \n",
-       "2734 2024-06-10 10:34:48.265449+00:00 2024-06-10 10:34:48.433554+00:00  \n",
-       "2735 2024-06-10 10:34:48.446694+00:00 2024-06-10 10:36:29.867533+00:00  \n",
-       "2736 2024-06-10 10:36:29.873005+00:00 2024-06-10 10:42:07.795778+00:00  \n",
+       "                            entry_time                         exit_time  \n",
+       "0     2024-06-17 11:33:13.977045+00:00  2024-06-17 11:33:14.131926+00:00  \n",
+       "1     2024-06-17 11:33:14.140396+00:00  2024-06-17 11:33:39.016139+00:00  \n",
+       "2     2024-06-17 11:33:39.023910+00:00  2024-06-17 11:33:41.556147+00:00  \n",
+       "3     2024-06-17 11:33:41.563947+00:00  2024-06-17 11:33:44.448222+00:00  \n",
+       "4     2024-06-17 11:33:44.453483+00:00  2024-06-17 11:34:42.400927+00:00  \n",
+       "...                                ...                               ...  \n",
+       "2732  2024-06-10 10:34:41.446511+00:00  2024-06-10 10:34:41.532564+00:00  \n",
+       "2733  2024-06-10 10:34:41.542251+00:00  2024-06-10 10:34:48.253354+00:00  \n",
+       "2734  2024-06-10 10:34:48.265449+00:00  2024-06-10 10:34:48.433554+00:00  \n",
+       "2735  2024-06-10 10:34:48.446694+00:00  2024-06-10 10:36:29.867533+00:00  \n",
+       "2736  2024-06-10 10:36:29.873005+00:00  2024-06-10 10:42:07.795778+00:00  \n",
        "\n",
        "[2593 rows x 5 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,28 +1707,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6361/2818119640.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  page_visits['entry_time'] = pd.to_datetime(page_visits['entry_time'])\n",
-      "/tmp/ipykernel_6361/2818119640.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  page_visits['exit_time'] = pd.to_datetime(page_visits['exit_time'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert 'entry_time' and 'exit_time' columns to datetime\n",
     "page_visits['entry_time'] = pd.to_datetime(page_visits['entry_time'])\n",
@@ -1737,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1727,7 @@
        "59.82195606896552"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1756,7 +1737,27 @@
        "64.51573823529412"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "66.103466742745"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "49.375162133038636"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,6 +1792,16 @@
     "    # Calculate and return the mean visit duration\n",
     "    return prediction_df['visit_duration'].mean()\n",
     "\n",
+    "def calculate_std_prediction_duration(df):\n",
+    "    # Filter the dataframe for rows where the page name contains 'prediction'\n",
+    "    prediction_df = df[df['page_name'].str.contains('/prediction/')].copy()\n",
+    "    \n",
+    "    # Calculate the visit duration in seconds\n",
+    "    prediction_df['visit_duration'] = (prediction_df['exit_time'] - prediction_df['entry_time']).dt.total_seconds()\n",
+    "    \n",
+    "    # Calculate and return the mean visit duration\n",
+    "    return prediction_df['visit_duration'].std()\n",
+    "\n",
     "def update_guideline_exit_times(df):\n",
     "    # Iterate through the rows of the dataframe\n",
     "    for i in range(len(df)):\n",
@@ -1819,12 +1830,25 @@
     "    # Calculate and return the mean visit duration\n",
     "    return guideline_df['visit_duration'].mean()\n",
     "\n",
+    "def calculate_std_guideline_duration(df):\n",
+    "    # Filter the dataframe for rows where the page name contains 'prediction'\n",
+    "    guideline_df = df[df['page_name'].str.contains('/guideline/')].copy()\n",
+    "    \n",
+    "    # Calculate the visit duration in seconds\n",
+    "    guideline_df['visit_duration'] = (guideline_df['exit_time'] - guideline_df['entry_time']).dt.total_seconds()\n",
+    "    \n",
+    "    # Calculate and return the mean visit duration\n",
+    "    return guideline_df['visit_duration'].std()\n",
+    "\n",
     "# Update the exit times for prediction pages\n",
     "updated_page_visits = update_prediction_exit_times(page_visits.reset_index(drop=True))\n",
     "updated_page_visits = update_guideline_exit_times(updated_page_visits)\n",
     "\n",
     "calculate_mean_prediction_duration(updated_page_visits)\n",
-    "calculate_mean_guideline_duration(updated_page_visits)"
+    "calculate_mean_guideline_duration(updated_page_visits)\n",
+    "\n",
+    "calculate_std_prediction_duration(updated_page_visits)\n",
+    "calculate_std_guideline_duration(updated_page_visits)"
    ]
   },
   {
