--- a/cdss_1/cdss_1/analysis/click_hover_timing_analysis.ipynb
+++ b/cdss_1/cdss_1/analysis/click_hover_timing_analysis.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15641/569877031.py:29: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/tmp/ipykernel_2175/569877031.py:29: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  hover_events = pd.concat(dfs_list, ignore_index=True)\n"
      ]
     }
@@ -4079,7 +4079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4092,7 +4092,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4351,7 +4351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -4397,7 +4397,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "link_clicks\n",
+       "predictiondetailsLink    62\n",
+       "guidelinedetailsLink     20\n",
+       "guidelinesLink_simple     4\n",
+       "guidelinesLink            1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clicks.link_clicks.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4414,7 +4439,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Patient wise\n",
+    "clicks_filtered = clicks.drop(columns=['user_id', 'user_archetype', 'timestamp', 'link_clicks'])\n",
+    "clicks_filtered = clicks_filtered[clicks_filtered['link_clicks_categories'] != 'guidelinesLink']\n",
+    "clicks_filtered_count = pd.DataFrame(clicks_filtered.groupby(['patient', 'link_clicks_categories']).value_counts())\n",
+    "# Get % - divide by len(demographics)/2 here as for each patient only half of participants could click on these\n",
+    "clicks_filtered_percentage = (clicks_filtered_count/(len(demographics)/2))*100\n",
+    "clicks_filtered_percentage.reset_index(inplace=True)\n",
+    "clicks_filtered_percentage.rename(columns={'count':'percentage'}, inplace=True)\n",
+    "clicks_filtered_percentage.sort_values(by='link_clicks_categories', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4423,7 +4465,7 @@
        "24.603174603174597"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4433,7 +4475,7 @@
        "11.456195570899732"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4443,7 +4485,7 @@
        "11.904761904761905"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4453,7 +4495,7 @@
        "5.090690322141416"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4468,7 +4510,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(demographics)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>patient</th>\n",
+       "      <th>link_clicks_categories</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">4</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">5</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">6</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">7</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">11</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">12</th>\n",
+       "      <th>guidelinedetailsLink</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predictiondetailsLink</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                count\n",
+       "patient link_clicks_categories       \n",
+       "1       guidelinedetailsLink        3\n",
+       "        predictiondetailsLink       3\n",
+       "2       guidelinedetailsLink        1\n",
+       "        predictiondetailsLink       5\n",
+       "3       predictiondetailsLink       4\n",
+       "4       guidelinedetailsLink        3\n",
+       "        predictiondetailsLink       9\n",
+       "5       guidelinedetailsLink        2\n",
+       "        predictiondetailsLink       1\n",
+       "6       guidelinedetailsLink        1\n",
+       "        predictiondetailsLink       8\n",
+       "7       guidelinedetailsLink        4\n",
+       "        predictiondetailsLink       5\n",
+       "8       predictiondetailsLink       5\n",
+       "9       predictiondetailsLink       3\n",
+       "10      predictiondetailsLink       8\n",
+       "11      guidelinedetailsLink        3\n",
+       "        predictiondetailsLink       7\n",
+       "12      guidelinedetailsLink        3\n",
+       "        predictiondetailsLink       4"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clicks_filtered_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patient 1:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 3 18]\n",
+      " [ 3 18]]\n",
+      "Fisher's Exact Test: Odds Ratio = 1.00, p = 1.000\n",
+      "Patient 2:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 5 16]\n",
+      " [ 1 20]]\n",
+      "Fisher's Exact Test: Odds Ratio = 6.25, p = 0.184\n",
+      "Patient 3:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 4 17]\n",
+      " [ 0 21]]\n",
+      "Fisher's Exact Test: Odds Ratio = inf, p = 0.107\n",
+      "Patient 4:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 9 12]\n",
+      " [ 3 18]]\n",
+      "Fisher's Exact Test: Odds Ratio = 4.50, p = 0.085\n",
+      "Patient 5:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 1 20]\n",
+      " [ 2 19]]\n",
+      "Fisher's Exact Test: Odds Ratio = 0.47, p = 1.000\n",
+      "Patient 6:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 8 13]\n",
+      " [ 1 20]]\n",
+      "Fisher's Exact Test: Odds Ratio = 12.31, p = 0.020\n",
+      "Patient 7:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 5 16]\n",
+      " [ 4 17]]\n",
+      "Fisher's Exact Test: Odds Ratio = 1.33, p = 1.000\n",
+      "Patient 8:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 5 16]\n",
+      " [ 0 21]]\n",
+      "Fisher's Exact Test: Odds Ratio = inf, p = 0.048\n",
+      "Patient 9:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 3 18]\n",
+      " [ 0 21]]\n",
+      "Fisher's Exact Test: Odds Ratio = inf, p = 0.232\n",
+      "Patient 10:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 8 13]\n",
+      " [ 0 21]]\n",
+      "Fisher's Exact Test: Odds Ratio = inf, p = 0.003\n",
+      "Patient 11:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 7 14]\n",
+      " [ 3 18]]\n",
+      "Fisher's Exact Test: Odds Ratio = 3.00, p = 0.277\n",
+      "Patient 12:\n",
+      "Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\n",
+      "[[ 4 17]\n",
+      " [ 3 18]]\n",
+      "Fisher's Exact Test: Odds Ratio = 1.41, p = 1.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import fisher_exact\n",
+    "from statsmodels.stats.contingency_tables import mcnemar\n",
+    "\n",
+    "# Define the two categories of interest:\n",
+    "categories = ['predictiondetailsLink', 'guidelinedetailsLink']\n",
+    "clicks_filtered_count_analysis = clicks_filtered_count.reset_index()\n",
+    "\n",
+    "# Loop through each unique patient\n",
+    "for patient in clicks_filtered_count_analysis['patient'].unique():\n",
+    "    # Get the data for the patient as a dictionary: category -> click count\n",
+    "    patient_data = clicks_filtered_count_analysis[clicks_filtered_count_analysis['patient'] == patient].set_index('link_clicks_categories')['count'].to_dict()\n",
+    "    \n",
+    "    # Ensure that both categories exist; if missing, fill in with 0\n",
+    "    counts = {cat: patient_data.get(cat, 0) for cat in categories}\n",
+    "    \n",
+    "    # Build the 2x2 contingency table for this patient.\n",
+    "    # Each row: [clicks, no_clicks], where no_clicks = 21 - click_count.\n",
+    "    table = []\n",
+    "    for cat in categories:\n",
+    "        clicks = counts[cat]\n",
+    "        no_clicks = 21 - clicks\n",
+    "        table.append([clicks, no_clicks])\n",
+    "    \n",
+    "    table = np.array(table)\n",
+    "    \n",
+    "    # Print the contingency table for clarity.\n",
+    "    # Row 0 is predictiondetailsLink, row 1 is guidelinedetailsLink.\n",
+    "    print(f\"Patient {patient}:\")\n",
+    "    print(\"Contingency Table (Rows: predictiondetailsLink, guidelinedetailsLink; Columns: Click, No Click):\")\n",
+    "    print(table)\n",
+    "    \n",
+    "    # Run Fisher's exact test on the 2x2 table.\n",
+    "    odds_ratio, p_value = fisher_exact(table, alternative='two-sided')\n",
+    "    print(f\"Fisher's Exact Test: Odds Ratio = {odds_ratio:.2f}, p = {p_value:.3f}\")\n",
+    "    # Run McNemar's test using the exact binomial method:\n",
+    "    #result = mcnemar(table, exact=True)\n",
+    "    #print(f\"McNemar's test statistic: {result.statistic:.2f}, p = {result.pvalue:.3f}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4646,13 +4986,67 @@
        "0         1   guidelinedetailsLink   14.285714"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clicks_filtered_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapiro-Wilk test: stat = 0.96, p = 0.832\n",
+      "Levene's test: stat = 1.21, p = 0.284\n",
+      "paired t-test: statistic = 4.31, p = 0.001\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "# Pivot the DataFrame so that each patient has both values\n",
+    "pivot_df = clicks_filtered_percentage.pivot(index='patient', \n",
+    "                                             columns='link_clicks_categories', \n",
+    "                                             values='percentage')\n",
+    "\n",
+    "# Fill missing percentages with 0\n",
+    "pivot_df = pivot_df.fillna(0)\n",
+    "\n",
+    "# Reorder and rename columns: 'predictiondetailsLink' becomes 'AI', 'guidelinedetailsLink' becomes 'Guideline'\n",
+    "ordered_columns = ['predictiondetailsLink', 'guidelinedetailsLink']\n",
+    "pivot_df = pivot_df[ordered_columns]\n",
+    "pivot_df.columns = ['AI', 'Guideline']\n",
+    "\n",
+    "# Compute the difference for each patient (AI - Guideline)\n",
+    "differences = pivot_df['AI'] - pivot_df['Guideline']\n",
+    "\n",
+    "# Test for normality of the differences using the Shapiro-Wilk test\n",
+    "stat, p_normality = stats.shapiro(differences)\n",
+    "print(f\"Shapiro-Wilk test: stat = {stat:.2f}, p = {p_normality:.3f}\")\n",
+    "\n",
+    "# Perform Levene's test for equal variances between AI and Guideline percentages\n",
+    "levene_stat, p_levene = stats.levene(pivot_df['AI'], pivot_df['Guideline'])\n",
+    "print(f\"Levene's test: stat = {levene_stat:.2f}, p = {p_levene:.3f}\")\n",
+    "\n",
+    "\n",
+    "# Choose the appropriate paired test based on the normality test\n",
+    "if p_normality > 0.05:\n",
+    "    test_name = 'paired t-test'\n",
+    "    t_stat, overall_p = stats.ttest_rel(pivot_df['AI'], pivot_df['Guideline'])\n",
+    "else:\n",
+    "    test_name = 'Wilcoxon signed-rank test'\n",
+    "    t_stat, overall_p = stats.wilcoxon(pivot_df['AI'], pivot_df['Guideline'])\n",
+    "\n",
+    "print(f\"{test_name}: statistic = {t_stat:.2f}, p = {overall_p:.3f}\")"
    ]
   },
   {
